# nas_music_downloader

./: .env.example  .gitignore  README.md  docker-compose.yml  init-db.sql
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  update_yt_dlp.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: nas_db_permission_issue.sh  update_yt_dlp.sh
backend/src/: app.py
backend/src/auth/: __init__.py  dependencies.py  security.py
backend/src/config/: settings.py
backend/src/model/: audit_log.py  db.py  download_history.py  user.py
backend/src/music_downloader/: app.py
backend/src/music_downloader/auth/: __init__.py  dependencies.py
backend/src/music_downloader/config/: settings.py
backend/src/music_downloader/model/: __init__.py  token_blacklist.py
backend/src/music_downloader/route/: auth.py  download.py  monitor.py
backend/src/music_downloader/schema/: auth.py  download.py
backend/src/music_downloader/service/: audit.py
backend/src/route/: base.py  download.py  monitor.py
backend/src/schema/: download.py
backend/src/service/: yt_music.py
backend/test/: test_download.py  test_model_imports.py  test_monitor_api.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/pages/: Download.tsx  History.tsx  Login.tsx  Register.tsx
frontend/src/state/: AuthContext.tsx
