[tool.poetry]
name = "music-downloader"
version = "0.1.0"
description = ""
authors = ["Nick Meng <mgy0822@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2025.5.22"
fastapi = "^0.116.0"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
