[tool.poetry]
name = "music-downloader"
version = "0.1.0"
description = ""
authors = ["Nick Meng <mgy0822@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2025.5.22"
fastapi = "^0.116.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.10.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
